# netperf

./: Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/workflows/: check.yml  rust.yml  test.yml
src/: client.rs  controller.rs  lib.rs  main.rs  server.rs
src/common/: consts.rs  control.rs  data.rs  mod.rs  net_utils.rs  opts.rs  perf_test.rs  stream_worker.rs  ui.rs
