[package]
name = "netperf"
version = "0.2.2"
description = "A network performance measurement tool"
authors = ["Ahmed Soliman <me@ahmedsoliman.com>"]
edition = "2018"
repository = "https://github.com/AhmedSoliman/netperf"
license = "MIT OR Apache-2.0"
keywords = ["network", "performance", "iperf3"]
categories = ["command-line-utilities", "simulation"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.40"
colored = "2.0.0"
env_logger = "0.9.0"
log = "0.4.14"
nix = "0.22.0"
structopt = "0.3.21"
bytes = "1.0.1"
clap-verbosity-flag = "0.3.1"
futures = "0.3.14"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
tokio = { version = "1.4.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "sync",
    "macros",
    "fs",
    "io-util"
] }
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "0.7.1"
tokio = { version = "1.4.0", features = ["test-util"] }
tokio-stream = "0.1.5"
