[package]
name = "netperf"
version = "0.2.3"
description = "A network performance measurement tool"
authors = ["Ahmed Farghal <me@asoli.dev>"]
edition = "2018"
repository = "https://github.com/AhmedSoliman/netperf"
license = "MIT OR Apache-2.0"
keywords = ["network", "performance", "iperf3"]
categories = ["command-line-utilities", "simulation"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.40"
colored = "2.0.0"
env_logger = "0.9.0"
log = "0.4.14"
nix = "0.23.1"
bytes = "1.1.0"
clap-verbosity-flag = "1.0.0"
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "sync",
    "macros",
    "fs",
    "io-util"
] }
uuid = { version = "0.8.2", features = ["v4"] }
clap = { version = "3.1.6", features = ["color", "derive"]}

[dev-dependencies]
pretty_assertions = "1.2.0"
tokio = { version = "1.17.0", features = ["test-util"] }
tokio-stream = "0.1.8"
