[package]
name = "netperf"
version = "0.2.6"
description = "A network performance measurement tool"
authors = ["Ahmed Farghal <me@asoli.dev>"]
edition = "2021"
repository = "https://github.com/AhmedSoliman/netperf"
license = "MIT OR Apache-2.0"
keywords = ["network", "performance", "iperf3"]
categories = ["command-line-utilities", "simulation"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.68"
colored = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
nix = "0.26.2"
bytes = "1.4.0"
clap-verbosity-flag = "2.0.0"
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
cling = { version = "0.0.1-alpha.1" }
tokio = { version = "1.25.0", features = [
  "rt",
  "rt-multi-thread",
  "net",
  "time",
  "sync",
  "macros",
  "fs",
  "io-util",
] }
uuid = { version = "1.3.0", features = ["v4"] }
clap = { version = "4.1.4", features = ["color", "derive"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
tokio = { version = "1.25.0", features = ["test-util"] }
tokio-stream = "0.1.11"
